syntax = "proto3";

option go_package = "/genproto/weather";

import "google/protobuf/timestamp.proto";

service WeatherService {
    rpc GetCurrentWeather (RequestCurrentWeather) returns (Weather) {}
    rpc GetWeatherForecast (RequestWeatherForecast) returns (ResponceWeatherForecast) {}
    rpc ReportWeatherCondition (Weather) returns (ResponceWeatherCondition) {}
}

message Weather {
    string city = 1;
    google.protobuf.Timestamp date = 2;
    float temperature = 3;
    int32 humidity = 4;
    float wind = 5;
}

message RequestCurrentWeather {
    string city = 1;
}

message RequestWeatherForecast {
    string city = 1;
    int32 days = 2;
}
message ResponceWeatherForecast {
    repeated Weather forecastdays = 1;
}

message ResponceWeatherCondition {
    bool success = 1;
}